--- a/src/app/desktop-split/desktop-split.component.html
+++ b/src/app/desktop-split/desktop-split.component.html
@@ -1,7 +1,11 @@
-<div class="center-comp" [hidden]="hideOnMobile === 1 && dataService.isMobile()">
+<div class="center-comp"
+    [hidden]="hideOnMobile === 1 && dataService.isMobile()"
+    [class.rightborder]="centerRightBorder">
   <ng-content select="[center]"></ng-content>
 </div>
 
-<div class="right-comp" [hidden]="hideOnMobile === 2 && dataService.isMobile()">
+<div class="right-comp"
+    [hidden]="hideOnMobile === 2 && dataService.isMobile()"
+    [class.leftborder]="rightLeftBorder">
     <ng-content select="[right]"></ng-content>
 </div>
