Do not bold subtitles in cards

--- a/src/app/body-card/body-card.component.html
+++ b/src/app/body-card/body-card.component.html
@@ -13,7 +13,7 @@
         {{ body.short_description }}
       </ng-container>
       <ng-template #hassub>
-        <b>{{ subtitle }}</b>
+        {{ subtitle }}
       </ng-template>
     </mat-card-subtitle>
   </mat-card-header>
