--- a/src/app/user-card/user-card.component.html
+++ b/src/app/user-card/user-card.component.html
@@ -19,7 +19,7 @@
       </ng-container>
 
       <ng-template #hasrole>
-        <b>{{role}}</b>
+        {{role}}
       </ng-template>
     </mat-card-subtitle>
   </mat-card-header>
