--- a/src/styles.css
+++ b/src/styles.css
@@ -173,6 +173,18 @@ mat-form-field, mat-form-field * {
     width: 70%;
 }
 
+.rl-header {
+    /* Responsive light header */
+    font-weight: 200;
+    font-size: 2.5em;
+}
+
+@media (max-width: 768px) {
+    .rl-header {
+        font-size: 1.5em;
+    }
+}
+
 @media (min-width: 768px){
     .desktop-10px {
         height: 10px;
