--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -6,7 +6,7 @@
 
     <div class="events-list">
         <div *ngFor="let c of containers" class="events-block">
-            <div class="date-header"
+            <div class="rl-header date-header"
                 *ngIf="c.title !== ''">
                 {{c.title}}
             </div>
