--- a/src/app/xunk-calendar/xunk-calendar.component.html
+++ b/src/app/xunk-calendar/xunk-calendar.component.html
@@ -24,7 +24,7 @@
     </tr>
 
     <!-- Weekday headers -->
-    <tr style="color: #aaa; font-size: 1.05em;">
+    <tr class="weekday">
         <th>M</th>
         <th>T</th>
         <th>W</th>
