--- a/src/app/update-body/update-body.component.css
+++ b/src/app/update-body/update-body.component.css
@@ -1,21 +1,11 @@
 #main {
-    background-color: white;
-    max-width: 500px;
-    margin: auto;
-    padding-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 .header-image {
     width:100%;
     height:auto;
     cursor: pointer;
-}
-
-@media (min-width: 768px) {
-    #main {
-        margin-top: 10px;
-        margin-bottom: 10px;
-    }
 }
 
 .card-header {
@@ -37,4 +27,18 @@
 .full-width-details {
     left: 2%;
     width: calc(96%);
+}
+
+.md-preview {
+    margin: 20px;
+}
+
+.md-preview .subh {
+    margin-left: 5px;
+    font-weight: 200;
+}
+
+.md-preview a {
+    color: var(--warn-color);
+    text-decoration: none;
 }
