--- a/src/app/update-body/update-body.component.html
+++ b/src/app/update-body/update-body.component.html
@@ -1,53 +1,67 @@
 <app-xunk-spinner *ngIf="!body"></app-xunk-spinner>
 
-<div id="main" class="real-center mat-elevation-z3" *ngIf="body">
+<app-desktop-split *ngIf="body"
+    [rightLeftBorder]="false"
+    [centerRightBorder]="true">
 
-<div class="theme-header">
-  <input style="display:none;" type="file" accept="image/*" #file id="file" (change)="uploadImage($event.target.files)">
-  <img class="header-image"
-       [src]="body.image_url"
-       src-fallback="assets/add_image_placeholder.svg"
-       (click)="file.click()">
+  <div center id="main">
 
-  <div class="card-header primary-background-color">
-      <mat-form-field color="accent" class="full-width">
-        <input [(ngModel)]="body.name" matInput required #bodyName
-               name="body_name" placeholder="Body Name">
-        <mat-hint align="end">{{bodyName.value.length}} / 50</mat-hint>
+    <div class="theme-header">
+      <input style="display:none;" type="file" accept="image/*" #file id="file" (change)="uploadImage($event.target.files)">
+      <img class="header-image"
+          [src]="body.image_url"
+          src-fallback="assets/add_image_placeholder.svg"
+          (click)="file.click()">
+
+      <div class="card-header primary-background-color">
+          <mat-form-field color="accent" class="full-width">
+            <input [(ngModel)]="body.name" matInput required #bodyName
+                  name="body_name" placeholder="Body Name">
+            <mat-hint align="end">{{bodyName.value.length}} / 50</mat-hint>
+          </mat-form-field>
+      </div>
+    </div>
+
+    <div>
+      <mat-form-field class="full-width-details">
+        <input matInput placeholder="Short Description" #shortDescription
+                  [(ngModel)]="body.short_description">
+        <mat-hint align="end">{{shortDescription.value.length}} / 50</mat-hint>
       </mat-form-field>
+
+      <mat-form-field class="full-width-details">
+        <textarea matInput placeholder="Description"
+                  [(ngModel)]="body.description" rows=8>
+        </textarea>
+      </mat-form-field>
+
+      <mat-form-field class="full-width-details">
+        <input matInput placeholder="Website URL"
+                  [(ngModel)]="body.website_url">
+      </mat-form-field>
+
+      <mat-form-field class="full-width-details">
+        <input matInput placeholder="Blog URL - RSS"
+                  [(ngModel)]="body.blog_url">
+      </mat-form-field>
+    </div>
+
+    <div>
+      <button mat-raised-button color="accent"
+              class="full-width-details"
+              (click)="go()">
+        Update
+      </button>
+    </div>
+
   </div>
-</div>
 
-<div>
-  <mat-form-field class="full-width-details">
-    <input matInput placeholder="Short Description" #shortDescription
-              [(ngModel)]="body.short_description">
-    <mat-hint align="end">{{shortDescription.value.length}} / 50</mat-hint>
-  </mat-form-field>
+  <div right class="md-preview">
+    <div class="rl-header head">Description Preview</div>
+    <div class="subh">
+      Styling with <a href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet" target="_blank">Markdown</a> is supported
+    </div>
+    <markdown class="markdown" [data]="body.description"></markdown>
+  </div>
 
-  <mat-form-field class="full-width-details">
-    <textarea matInput placeholder="Description"
-              [(ngModel)]="body.description" rows=8>
-    </textarea>
-  </mat-form-field>
-
-  <mat-form-field class="full-width-details">
-    <input matInput placeholder="Website URL"
-              [(ngModel)]="body.website_url">
-  </mat-form-field>
-
-  <mat-form-field class="full-width-details">
-    <input matInput placeholder="Blog URL - RSS"
-              [(ngModel)]="body.blog_url">
-  </mat-form-field>
-</div>
-
-<div>
-  <button mat-raised-button color="accent"
-          class="full-width-details"
-          (click)="go()">
-    Update
-  </button>
-</div>
-
-</div>
+</app-desktop-split>
