--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,10 +1,12 @@
-<div class="login-container detail-card-elem real-center mat-elevation-z3" *ngIf="!authenticating">
-  <div class="heading">Login to continue</div>
-  <img src="assets/logo.svg" class="login-button mat-elevation-z3 logo">
+<div class="main">
+  <div class="head">
+    Follow events, get updates on internships, placements and more. Login with your LDAP account to continue.
+  </div>
+
   <button mat-raised-button
           (click)='login()'
           color="accent"
           class="login-button">
-      Login with LDAP SSO
+      LOG IN
   </button>
 </div>
