Add logo animated fader

--- a/src/app/xunk-spinner/xunk-spinner.component.html
+++ b/src/app/xunk-spinner/xunk-spinner.component.html
@@ -1,11 +1,11 @@
-<div class="loading-spinner" *ngIf="!error">
-  <div class="spinner mat-elevation-z2">
-    <div class="rect1"></div>
-    <div class="rect2"></div>
-    <div class="rect3"></div>
-    <div class="rect4"></div>
-    <div class="rect5"></div>
-  </div>
+<div class="loading-fader" *ngIf="!error">
+  <img class="p1" src="assets/petal.svg">
+  <img class="p2" src="assets/petal.svg">
+  <img class="p3" src="assets/petal.svg">
+  <img class="p4" src="assets/petal.svg">
+  <img class="p5" src="assets/petal.svg">
+  <img class="p6" src="assets/petal.svg">
+  <img class="p7" src="assets/petal.svg">
 </div>
 
 <div class="nothing-at-all" *ngIf="error">
