--- a/src/app/my-events/my-events.component.html
+++ b/src/app/my-events/my-events.component.html
@@ -1,5 +1,7 @@
 <app-xunk-spinner *ngIf="!containers || error" [error]="error"></app-xunk-spinner>
 
+<div class="top-gap"></div>
+
 <app-feed
     *ngIf="containers && !error"
     [containers]="containers"
